tests/invalid/Parsing_Invalid_23.whiley
function f(int x):
    if(x >= 0):
      int y = x + 1
    //
    return y
